--- a/styles/style.css
+++ b/styles/style.css
@@ -190,3 +190,35 @@ margin-top: 7px;
                 border-radius: 10px;
                 background-color: #a2ac23c9;
         }
+        .Chif-Ad{
+            width: 700px;
+            height: 120px;
+            justify-content: center;
+            background-color: #f1eeeea2;
+            margin: 40px 20px 25px 22px;
+            border-radius: 10px;
+            padding: 19px;
+            
+        }
+        .body{
+            background-image: url(/assets/quote-bg.png);
+            background-repeat: no-repeat;
+            /* justify-content: center; */
+            /* align-items: center; */
+            color: #530f0f;
+            
+        }
+        .text{
+            font-weight: 10px;
+            font-size: 15px;
+            justify-content: center;
+            padding: 7px;
+        }
+
+    .Name{
+        margin-top: auto;
+    }
+    .posi{
+        font-size: 10px;
+        padding: 3px;
+    }
