--- a/styles/style.css
+++ b/styles/style.css
@@ -222,3 +222,92 @@ margin-top: 7px;
         font-size: 10px;
         padding: 3px;
     }
+.table-1{
+    width: 85%;
+    background-color: #fffbfb;
+    margin: 0 auto;
+    margin-top: 30px;
+    margin-left: 50px;
+    border-radius: 10px;
+    text-align: left;
+    padding:20px;
+}
+.th, td{
+    padding: 15px;
+    text-align: left;
+    border-bottom: 1px solid #ddd;
+}
+th{
+    background-color: #C6E4D6;
+    width: 300px;
+    height: 30px;
+    padding: 10px;
+} 
+.noth{
+    align-items: center;
+    justify-content: center;
+}
+.test{
+    justify-items: left;
+}
+.settle{
+    max-width: 300px;
+}
+   
+main{
+    width: 85%;
+    background-color: #fffbfb;
+    margin: 0 auto;
+    margin-top: 30px;
+    border-radius: 10px;
+    text-align: left;
+    padding:20px;
+}
+.box-1{
+    display: flex;
+    width: 100%;
+    margin: 0 auto;
+    align-items: center;
+    justify-content: space-around;
+    /* border: 1px solid gray; */
+}
+
+.box1-right{
+    color: #b19393;
+    width: 400px;
+    height: 220px;
+    
+}
+.box1-left{
+    width: 300px;
+    height: 180px;
+    position: 30px 30px ;
+    border-radius: 10px;
+    margin-bottom: 50px;
+}
+.time{
+    /* padding: 5px; */
+    margin-bottom: 10px;
+}
+.fontsi{
+    font-weight: bold;
+    font-size: 10px;
+    color: #b19393;
+}
+.titf{
+    color: #b19393;
+    padding: 10px;
+    /* width: 600px; */
+    /* height: 20px; */
+}
+.pic-3{
+    display: flex;
+    padding: 10px;
+}
+.box1-right{
+    color: #b19393;
+    width: 400px;
+    height: 220px;
+    margin-left: 20px;
+}
+   
