--- a/styles/style.css
+++ b/styles/style.css
@@ -310,4 +310,66 @@ main{
     height: 220px;
     margin-left: 20px;
 }
-   
+.subimt{
+    width: 93%;
+    height: 180px;
+    text-align: center;
+    background-color: #C6E4D6;
+    margin-bottom: 20px;
+    border-radius: 10px;
+}
+.donet{
+    font-weight: bold;
+    font-size: 20px;
+    color: #0E0E0E;
+    margin-top: 10px;
+    padding: 10px;
+}
+.lori{
+    color: #693f3f;
+    font-weight: bold;
+    font-size: 10px;
+    margin-right: 80px;
+    margin-left: 80px;
+    padding: 5px;
+}
+.Hober{
+    width: 93%;
+    height: 220px;
+    text-align: center;
+    background-color: #f1eded;
+    /* margin-bottom: 20px; */
+    margin-bottom: 20px;
+    border-radius: 10px;
+}
+.container{
+    text-align: center;
+}
+.box{
+    display: inline-block;
+    width: 80px;
+    height: 40px;
+    background-color: #f0f0f0;
+    /* border: 1px solid #ccc; */
+
+    border-radius: 5px;
+    margin: 10px;
+    /* font-weight: bold; */
+    font-size: 17px;
+    text-align: center;
+    line-height: 50px;
+}
+.box:hover{
+    color: #633535;
+    background-color: #b19696;
+    cursor: pointer;
+}
+.inpu{
+    border: none;
+}
+.foot{
+    text-align:center ;
+    font-weight: bold;
+    font-size: 40px;
+    color: #530f0f;
+}
